# theatre-dev

./: .gitignore  Makefile  cabal.project  theatre-dev.cabal
.github/workflows/: build-and-test.yaml  check.yaml
hspec/: Main.hs  TheatreDevSpec.hs
hspec/TheatreDev/: ActorSpec.hs  StmBasedSpec.hs
hspec/TheatreDev/ActorSpec/: IO.hs  Preferences.hs
hspec/TheatreDev/StmBasedSpec/: IO.hs  Preferences.hs
hspec/TheatreDevSpec/: IO.hs  Preferences.hs
