cabal-version: 3.0

name: theatre-dev
version: 0.1
category: Concurrency, Actors
synopsis: Minimalistic actor library experiments
description:
  Design space exploration for the \"theatre\" library.
  Don\'t expect this lib to maintain a stable API.
  Once clearly useful abstractions emerge, they'll be moved to the
  \"theatre\" lib.
stability: experimental
homepage: https://github.com/nikita-volkov/theatre-dev
bug-reports: https://github.com/nikita-volkov/theatre-dev/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2022, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: git://github.com/nikita-volkov/theatre-dev.git

library
  hs-source-dirs: library
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    TheatreDev.Perpetual
  other-modules:
    TheatreDev.Prelude
  build-depends:
    base >=4.9 && <5,
    contravariant >=1.3 && <2,
    semigroups >=0.19 && <0.21,
    unagi-chan >=0.4.1.4 && <0.5,
